[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]

[node name="main" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="canvas_layer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="btn_banner" type="Button" parent="canvas_layer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 220.0
margin_right = 257.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Show/Hide Banner"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="btn_interstitial" type="Button" parent="canvas_layer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 305.0
margin_right = 257.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Show Interstitial"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="btn_rewarded_video" type="Button" parent="canvas_layer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 394.0
margin_right = 258.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Show Rewarded Video"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="lbl_rewarded" type="Label" parent="canvas_layer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 477.0
margin_right = 360.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 4
text = "REWARDED VIDEO RETURN"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="debug" type="Label" parent="canvas_layer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 360.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[connection signal="toggled" from="canvas_layer/btn_banner" to="." method="_on_btn_banner_toggled"]

[connection signal="pressed" from="canvas_layer/btn_interstitial" to="." method="_on_btn_interstitial_pressed"]

[connection signal="pressed" from="canvas_layer/btn_rewarded_video" to="." method="_on_btn_rewarded_video_pressed"]


